# qhot-Hot-reload-qt6

./: CMakeLists.txt
qml/: main.qml  test.qml
src/: CMakeLists.txt  providessomething.cpp
